# sample-document-processing-with-amazon-bedrock-data-automation

20-Industry-Use-Cases/23-Energy-Well-Reports/: .gitignore  23-Energy_Well_Reports.ipynb  README.md  pyproject.toml
20-Industry-Use-Cases/23-Energy-Well-Reports/data/blueprints/: completions.json  directional.json
20-Industry-Use-Cases/23-Energy-Well-Reports/infra/: app.py  stack.py
20-Industry-Use-Cases/23-Energy-Well-Reports/scripts/: build_push.sh  deploy.sh
20-Industry-Use-Cases/23-Energy-Well-Reports/services/lambda/bda-report-processor/: main.py
20-Industry-Use-Cases/23-Energy-Well-Reports/services/lambda/bda-report-processor/docker/: Dockerfile
20-Industry-Use-Cases/23-Energy-Well-Reports/source/: bda.py  utils.py
